<package>
  <name>segbot_firmware</name>
  <version>0.3.4</version>
  <description>
    Arduino firmware for BWI segbot sensor array.
  </description>

  <license>BSD</license>
  <license>GPLv3</license>  <!-- NewPing library -->

  <url type="website">http://ros.org/wiki/segbot_firmware</url>
  <url type="repository">https://github.com/utexas-bwi/segbot.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot/issues</url>

  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <author>Jose Bigio</author>
  <author>Jack O'Quin</author>
  <author>Tim Eckel (NewPing library)</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- TODO: figure out dependencies for Arduino cross-compile and loading. -->

</package>
