<package>
  <name>segbot_gazebo</name>
  <version>0.3.1</version>
  <description>bwi_gazebo</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bwi_gazebo</url>
  <url type="repository">https://github.com/utexas-bwi/segbot_simulator.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot_simulator/issues</url>

  <author>Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>fake_localization</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>segbot_bringup</run_depend>
  <run_depend>segbot_description</run_depend>
  <run_depend>segbot_navigation</run_depend>

  <!-- test dependencies -->
  <build_depend>roslaunch</build_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
