<package format="2">
  <name>segbot_gazebo</name>
  <version>0.3.5</version>
  <description>bwi_gazebo</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bwi_gazebo</url>
  <url type="repository">https://github.com/utexas-bwi/segbot_simulator.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot_simulator/issues</url>

  <author>Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>fake_localization</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>segbot_bringup</exec_depend>
  <exec_depend>segbot_description</exec_depend>
  <exec_depend>segbot_navigation</exec_depend>

  <!-- test dependencies -->
  <test_depend>roslaunch</test_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
