<package>
  <name>segbot_logical_translator</name>
  <version>0.3.1</version>
  <description>
    High-level navigation application for the segbot allowing the segbot to
    approach and gothrough doors. The application can also be used to determine
    the segbot's logical location, as well as sense when a door in front of the
    robot is open or not.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/segbot_logical_translator</url>
  <url type="repository">https://github.com/utexas-bwi/segbot_apps</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot_apps/issues</url>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>bwi_mapper</build_depend>
  <build_depend>bwi_msgs</build_depend>
  <build_depend>bwi_planning_common</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>multi_level_map_msgs</build_depend>
  <build_depend>multi_level_map_utils</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>bwi_mapper</run_depend>
  <run_depend>bwi_msgs</run_depend>
  <run_depend>bwi_planning_common</run_depend>
  <run_depend>map_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>multi_level_map_msgs</run_depend>
  <run_depend>multi_level_map_utils</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>segbot_navigation</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>utexas_gdc</run_depend>

</package>
