<package>
  <name>segbot_navigation</name>
  <version>0.3.1</version>
  <description>
    Contains launch files for running the ROS navigation stack on the segbot
    using the eband_local_planner approach, as well as launch files for amcl
    and gmapping.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/segbot_navigation</url>
  <url type="repository">https://github.com/utexas-bwi/segbot_apps.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot_apps/issues</url>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bwi_interruptable_action_server</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>bwi_interruptable_action_server</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

  <run_depend>amcl</run_depend>
  <run_depend>eband_local_planner</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend version_gte="1.11.15">move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>segbot_bringup</run_depend>

  <!-- test dependencies -->
  <build_depend>roslaunch</build_depend>

</package>
