<package format="2">
  <name>segbot_navigation</name>
  <version>0.3.5</version>
  <description>
    Contains launch files for running the ROS navigation stack on the segbot
    using the eband_local_planner approach, as well as launch files for amcl
    and gmapping.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/segbot_navigation</url>
  <url type="repository">https://github.com/utexas-bwi/segbot_apps.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot_apps/issues</url>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>bwi_interruptable_action_server</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>eband_local_planner</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend version_gte="1.11.15">move_base</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>segbot_bringup</exec_depend>

  <!-- test dependencies -->
  <test_depend>roslaunch</test_depend>

</package>
