<package format="2">
  <name>segbot_sensors</name>
  <version>0.3.5</version>
  <description>
    Contains sensor specific launch files and all the relevant filters that are
    applied on sensor data before being used by the segbot.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/segbot_sensors</url>
  <url type="repository">https://github.com/utexas-bwi/segbot.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot/issues</url>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_filters</depend>
  <depend>nodelet</depend>
  <depend>pcl_ros</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>smart_battery_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>camera1394</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>filters</exec_depend>
  <exec_depend>freenect_launch</exec_depend>
  <exec_depend>hokuyo_node</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>openni_launch</exec_depend>
  <exec_depend>python-serial</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_robot_monitor</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <filters plugin="${prefix}/segbot_sensors_plugins.xml"/>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>

</package>
